--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
 					</div>
 
 					<div class="timeline-header">
-						<h3>Co-Founder</h3>
+						<h3>Founder</h3>
 						<p>October 2021 - Present</p>
 					</div>
 
 					<div class="timeline-content">
-						<h4>Warnet Inc.</h4>
+						<h4>Techuro</h4>
 						<p>(Full-time)
 							<br>Develop business solutions.</p>
 					</div>
@@ -562,10 +562,12 @@
    	</div> <!-- /portfolio-content --> 
 		
 	</section> <!-- /portfolio --> 
+	
 
 
 	<!-- CTA Section
    ================================================== -->
+   
 	
 	
 	<!-- services Section
