--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.lakshaykumar.me</span>
+   					<span>www.lakshaykumar.tech</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>contact@lakshaykumar.me</span>
+   					<span>contact@lakshaykumar.tech</span>
    				</li>
 
    			</ul> <!-- /info-list -->
