--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>Lakshay Kumar</title>
-	<meta name="description" content="">  
-	<meta name="author" content="">
+	<meta name="description" content="A young aspiring Data Scientist, who love to build AI and
+					ML applications, that can contribute as a solution in real
+					world problems.">  
+	<meta name="author" content="Lakshay Kumar">
 
    <!-- mobile specific metas
    ================================================== -->
