--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 					ML applications, that can contribute as a solution in real
 					world problems.">  
 	<meta name="author" content="Lakshay Kumar">
+	<meta property="og:title" content="Lakshay Kumar">
+<meta property="og:description" content="A young aspiring Data Scientist, who love to build AI and
+					ML applications, that can contribute as a solution in real
+					world problems.">
+<meta property="og:image" content="favicon.png">
+<meta property="og:url" content="https://www.lakshaykumar.tech/">
+
 
    <!-- mobile specific metas
    ================================================== -->
