--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 					world problems.">  
 	<meta name="author" content="Lakshay Kumar">
 	<meta property="og:title" content="Lakshay Kumar">
-<meta property="og:description" content="A young aspiring Data Scientist, who love to build AI and
-					ML applications, that can contribute as a solution in real
-					world problems.">
+<meta property="og:description" content="Data Scientist | Founder of Techuro | Tech Coder | Startup Enthusiast">
 <meta property="og:image" content="favicon.png">
-<meta property="og:url" content="https://www.lakshaykumar.tech/">
+<meta property="og:url" content="https://www.linkedin.com/feed/update/urn:li:activity:6919125838126858240/">
 
 
    <!-- mobile specific metas
