--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
 
 		<div class="row">
 			<div class="col-twelve">
-				<h5>Awards</h5>
+				<h5>Numbers</h5>
 
 				<div class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list">
 
@@ -923,11 +923,11 @@
 					
 
 						<h3 class="stat-count">
-							10
+							7
 						</h3>
 
 						<h5 class="stat-title">
-							Crazy Ideas
+							Online Courses
 						</h5>
 
 					</div> <!-- /stat -->
@@ -951,11 +951,11 @@
 						
 
 						<h3 class="stat-count">
-							5
+							1
 						</h3>
 
 						<h5 class="stat-title">
-							Projects
+							Talks
 						</h5>
 
 					</div> <!-- /stat -->
