contact details update

--- a/index.html
+++ b/index.html
@@ -208,20 +208,17 @@
    					<span>Lakshay Kumar</span>
    				</li>
    				<li>
-   					<strong>Birth Date:</strong>
-   					<span>September 21, 2003</span>
+   					<strong>Contact</strong>
+					<span><a href="tel:+918595984485">+91 8595984485</a></span>
    				</li>
    				<li>
-   					<strong>Job:</strong>
-   					<span>Python Developer</span>
+   					<strong>Location</strong>
+   					<span>Bangalore, Karnataka</span>
    				</li>
-   				<li>
-   					<strong>Website:</strong>
-   					<span>www.lakshaykumar.tech</span>
-   				</li>
+   				
    				<li>
    					<strong>Email:</strong>
-   					<span>contact@lakshaykumar.tech</span>
+					<span><a href="mailto:contact@lakshaykumar.tech">contact@lakshaykumar.tech</a></span>
    				</li>
 
    			</ul> <!-- /info-list -->
