time updated in website.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
 				</li>
 				<li>
 					<strong>Join Live - </strong>
-					<p><a href="https://www.linkedin.com/video/event/urn:li:ugcPost:6969551235473440769/">LinkedIn</a></p>
+					<p><a href="https://www.linkedin.com/video/event/urn:li:ugcPost:6969551235473440769/">LinkedIn</a><br>
+					<img src="https://cdn-icons-png.flaticon.com/512/992/992700.png" style="height:15px;">&nbsp;September 11, 2022. 06:30 PM
+					</p>
 				</li>
 				<li>
 					<b><a href="https://www.linkedin.com/video/event/urn:li:ugcPost:6969551235473440769/" style="padding:10px;border: 3px #000 solid">Join Now</a></b>
