--- a/index.html
+++ b/index.html
@@ -530,6 +530,15 @@
 		<h3 style="color:#808080">Python Packages</h3>
 		<dl>
 			<dt>
+				<strong>> lkbodysegmentation</strong></dt>
+			   <dd>Subtract the background from orignal Image.
+				<br>
+				<a href="https://pypi.org/project/lkbodysegmentation/" style="color:#fcf4a3;">Try it out</a>
+
+
+			   </dd>
+			   <br>
+			<dt>
 				<strong>> lkhandmapping</strong></dt>
 			   <dd>Deply handtracking model with just few lines of code.
 				<br>
