--- a/index.html
+++ b/index.html
@@ -404,7 +404,8 @@
 	   				<div class="timeline-content">
 	   					<h4>Hex Business Innovation</h4>
 	   					<p>(Internship)
-							   <br>Worked as a Junior Developer, worked on Android and React JS. Contributed towards the product development.</p>
+							   <br>Worked on Company's product development and contributed towards face detection / recognition modules.
+</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
