update message page

--- a/index.html
+++ b/index.html
@@ -611,6 +611,7 @@
 				<b>Timeline : </b>July 2022 - August 2022
 				
 			</div>
+			
 			<div class="col-three">
 				<b style="margin-top:20px;">Techonlogies used</b>
 				<ul>
@@ -1027,9 +1028,9 @@
    		<div class="col-twelve">
 
    			<h5>Contact</h5>
-   			<h1>I'd Love To Hear From You.</h1>
+   			<h1></h1>
 
-   			<p class="lead">Share me anything you want to. I'll be happy to reply :)</p>
+   			<p class="lead"></p>
 
    		</div> 
    	</div> <!-- /section-intro -->
