--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,9 @@
 
    <!-- footer
    ================================================== -->
-
+   <div id="preloader"> 
+    	<div id="loader"></div>
+   </div> 
    <footer>
      	<div class="row">
 
