--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
 				   </li>
 					<li>
 				   	
+				   	<strong>Web Scraping</strong>
+				   </li>
+					<li>
+				   	
 				   	<strong>Java</strong>
 				   </li>
 				   <li>
