--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
+						<li><a  href="https://blogs.lakshaykumar.tech/" title="">Blogs</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Projects</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
