--- a/index.html
+++ b/index.html
@@ -394,6 +394,23 @@
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
+				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-graduation-cap"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Research Assistant</h3>
+	   					<p>Sep 2021 - Jan 2022</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Atria University</h4>
+						<p>Data Driven Research in mutations happening in COVID-19 virus.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
 
 	   			<div class="timeline-block">
 
