--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 						<li><a class="smoothscroll"  href="#portfolio" title="">Projects</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
+						<li><a class="smoothscroll" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/lakshaykumar/appoinment'});return false;">Schedule Meeting</a></li>
+						
 								
 					</ul>
 				</nav>    		
@@ -1207,6 +1209,9 @@
    <script src="js/jquery-2.1.3.min.js"></script>
    <script src="js/plugins.js"></script>
    <script src="js/main.js"></script>
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+
 
 </body>
 
