--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Lakshay Kumar</title>
-	<meta name="description" content="A young aspiring Data Scientist, who love to build AI and
+	<title>Lakshay Kumar - Aspiring Data Scientist</title>
+	<meta name="description" content="Lakshay Kumar is young aspiring Data Scientist, who love to build AI and
 					ML applications, that can contribute as a solution in real
 					world problems.">  
 	<meta name="author" content="Lakshay Kumar">
@@ -77,7 +77,7 @@
 
 	<!-- intro section
    ================================================== -->
-   <section id="intro">   
+   <section id="intro" alt="Lakshay Kumar intro">   
 
    	<div class="intro-overlay"></div>	
 
@@ -113,7 +113,7 @@
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
-   <section class="grey-section" id="resume" >
+   <section class="grey-section" id="resume" alt = "Lakshay kumar resume and profile">
 	<div class="row section-intro">
 		<div class="col-twelve">
 
@@ -159,7 +159,7 @@
 		</div>
 
 		<div class="col-six tab-full">
-			<img src="DevOpsChat.png" height="200px">
+			<img src="DevOpsChat.png" alt = "lakshay kumar webinar on drones and techonology" height="200px">
 
 		
 
@@ -203,7 +203,7 @@
 		</div>
 
 		<div class="col-six tab-full">
-			<img src="reactorWebinar.png" height="200px">
+			<img src="reactorWebinar.png" alt = "lakshay kumar speaking on computer vision in drones at microsoft" height="200px">
 
 		
 
@@ -232,11 +232,7 @@
 
    				<img src="images/lakshay.jpg" alt="Profile Picture">
 
-   				<p class="lead">A young aspiring Data Scientist, who love to build AI and
-					ML applications, that can contribute as a solution in real
-					world problems. I started my coding journey in grade 8,
-					since then I have developed solutions to many
-					organizations.</p>
+   				<p class="lead">A young aspiring Data Scientist, Lakshay love to build AI and ML applications, that can contribute as a solution in real world problems. Having started his my coding journey in grade 8, I have delivered various projects adding value to industry</p>
 
 
    		</div>   		
