--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
 						
 
 						<h3 class="stat-count">
-							1
+							2
 						</h3>
 
 						<h5 class="stat-title">
@@ -1048,7 +1048,7 @@
    		<div class="col-twelve">
 
    			<h5>Contact</h5>
-   			<h1></h1>
+   			<h1>I'd Love To Hear From You.</h1>
 
    			<p class="lead"></p>
 
