--- a/index.html
+++ b/index.html
@@ -132,7 +132,61 @@
 	</div> <!-- /section-intro -->
 
 		
+		
 	<hr>
+		<div class="row about-content">
+			<div>
+
+				<div class="col-six tab-full">
+
+					<h3>Topic</h3>
+					<p>Build your own Python Packages</p>
+
+					<ul class="info-list">
+						<li>
+							<strong>Details</strong>
+							<p>
+								<b><small>Building AI/ML Packages from scratch</small></b><br>
+
+
+								<small>Often we create new utilities while solving our own problems, which we want to
+									package and publish for wider
+									AI/Developer community benefit however often we do not know how to do that? This
+									talk exactly covers how we can create and publish our own AI packages.</small>
+
+							</p>
+						</li>
+						<li>
+							<strong>RSVP</strong>
+							<p><img src="https://cdn-icons-png.flaticon.com/512/992/992700.png"
+									style="height:15px;">&nbsp;September 12, 2022. 10:15 AM<br><img
+									src="https://cdn-icons-png.flaticon.com/512/67/67347.png"
+									style="height:15px;">&nbsp;Microsoft Reactor Bengaluru<br>
+								Lavelle Road · Bengaluru, KA</p>
+						</li>
+						<li>
+							<b><a href="https://www.meetup.com/bangalore-ai-ml-meetup/events/288772599/"
+									style="padding:10px;border: 3px #000 solid">Register Now</a></b>
+						</li>
+
+
+
+
+					</ul> <!-- /info-list -->
+
+				</div>
+
+				<div class="col-six tab-full">
+					<img src="talk3.png" height="200px">
+
+
+
+				</div><br>
+
+			</div>
+			<hr>
+		</div>
+
 		<div class="row about-content">
 		<div>
 
