--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 				   </li>
 					<li>
 				   	
-				   	<strong>Java</strong>
+				   	<strong>Java / C#</strong>
 				   </li>
 				   <li>
 
