--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
          <li><a href="https://www.linkedin.com/in/lakshay2193/"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://twitter.com/lakshaykumar219"><i class="fa fa-twitter"></i></a></li>
          <li><a href="https://github.com/laksh-2193	"><i class="fa fa-github"></i></a></li>
-         <li><a href="https://instagram.com/geeky._.guy"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.instagram.com/strangest_sanity/"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
