--- a/index.html
+++ b/index.html
@@ -136,6 +136,54 @@
 	<hr>
 		<div class="row about-content">
 			<div>
+		
+				<div class="col-six tab-full">
+		
+					<h3>Topic</h3>
+					<p>iOT in Drones</p>
+		
+					<ul class="info-list">
+						<li>
+							<strong>Details</strong>
+							<p>
+								<b>AI in Drones</b><br>
+		
+		
+								Talk about developing solutions for new age problems and Contribution of drones in future.
+							</p>
+						</li>
+						<li>
+							<strong>RSVP</strong>
+							<p><img src="https://cdn-icons-png.flaticon.com/512/992/992700.png"
+									style="height:15px;">&nbsp;November 24, 2022. 04:30 PM<br><img
+									src="https://cdn-icons-png.flaticon.com/512/67/67347.png"
+									style="height:15px;">&nbsp;KTPO, Whitefield<br>
+								Lavelle Road · Bengaluru, KA</p>
+						</li>
+						<li>
+							<b><a href="https://www.iotshow.in/iotshow-2022-2/artificial-intelligence-in-drones/"
+									style="padding:10px;border: 3px #000 solid">Register Now</a></b>
+						</li>
+		
+		
+		
+		
+					</ul> <!-- /info-list -->
+		
+				</div>
+		
+				<div class="col-six tab-full">
+					<img src="TalkAtWhiteField.jpg" height="200px">
+		
+		
+		
+				</div><br>
+		
+			</div>
+			<hr>
+		</div>
+		<div class="row about-content">
+			<div>
 
 				<div class="col-six tab-full">
 
