--- a/webinars.html
+++ b/webinars.html
@@ -134,6 +134,24 @@
                     <section data-scrollax-parent="true" id="sec1">
                         <div class="section-subtitle right-pos"  data-scrollax="properties: { translateY: '-250px' }"><span>//</span>Awesome</div>
                         <div class="container">
+                            <div class="team-box">
+                                    <div class="team-photo">
+                                        <div class="overlay"></div>
+                                        
+                                        <img src="images/talks/TinyML.png" alt="" class="respimg">
+                                    </div>
+                                    <div class="team-info">
+                                        <h3 style="font-size: 20px;">Tiny Machine Learning</h3>
+                                        <h4>All about Tiny ML</h4>
+                                        <p>
+                                           ML requires a lot of computing speed and even the cloud services are required on large scale. This talk covers details about how to integrate ML and run TensorFlow on a microcontroller that will help in saving a lot of cost. Speaker emphasise that this doesn’t need high computing power if we learn to use Tiny ML effectively.
+                                        </p>
+                                        <b>RSVP : </b> <br>Februray 4, 2022. 10:30 AM @ Thoughtworks, Whitefield.
+                                        <a href="https://www.meetup.com/bangalore-ai-ml-meetup/events/290870645/"
+                                            class="custom-scroll-link btn float-btn flat-btn color-btn mar-top">Register Now</a>
+                            
+                                    </div>
+                                </div>
                             <!-- team-box   --> 
                             <div class="team-box">
                                 <div class="team-photo">
