--- a/webinars.html
+++ b/webinars.html
@@ -144,7 +144,7 @@
                                         <h3 style="font-size: 20px;">Tiny Machine Learning</h3>
                                         <h4>All about Tiny ML</h4>
                                         <p>
-                                           ML requires a lot of computing speed and even the cloud services are required on large scale. This talk covers details about how to integrate ML and run TensorFlow on a microcontroller that will help in saving a lot of cost. Speaker emphasise that this doesn’t need high computing power if we learn to use Tiny ML effectively.
+                                           ML requires a lot of computing speed and even the cloud services are required on large scale. This talk covers details about how to integrate ML and run TensorFlow on a microcontroller that will help in saving a lot of cost.
                                         </p>
                                         <b>RSVP : </b> <br>Februray 4, 2022. 10:30 AM @ Thoughtworks, Whitefield.
                                         <a href="https://www.meetup.com/bangalore-ai-ml-meetup/events/290870645/"
