--- a/webinars.html
+++ b/webinars.html
@@ -138,7 +138,7 @@
                                     <div class="team-photo">
                                         <div class="overlay"></div>
                                         
-                                        <img src="images/talks/TinyML.png" alt="" class="respimg">
+                                        <img src="images/talks/tinyMLTalk.png" alt="" class="respimg">
                                     </div>
                                     <div class="team-info">
                                         <h3 style="font-size: 20px;">Tiny Machine Learning</h3>
