--- a/index.html
+++ b/index.html
@@ -319,20 +319,22 @@
                                         <div class="col-md-4">
                                             <div class="custom-inner-header educ">
                                                 <i class="fal fa-university"></i>
-                                                <h3> AI Developer - CHES Labs</h3>
-                                                <span>  January 2023 - Present </span>
+                                                <h3> Project Manager - Atria Foundation</h3>
+                                                <span>  February 2023 - Present </span>
                                             </div>
                                             <div class="ci-num"><span>00. - </span></div>
                                         </div>
                                         <div class="col-md-5">
                                             <div class="custom-inner-content fl-wrap">
                                                 <h4>Full Time</h4>
-                                                <p>It is about digital health but in stealth mode.
+                                                <p>Managing teams for frontend and backend. Ideation over
+launching the product
+
                                                 </p>
                                                
                                             </div>
                                         </div>
-                                        <div class="col-md-3"><img src="https://img.freepik.com/premium-vector/confidential-red_123447-746.jpg?w=2000" class="respimg" data-scrollax="properties: { translateY: '270px' }" alt="lakshay kumar - data science"></div>
+                                        <div class="col-md-3"><img src="https://pbs.twimg.com/profile_images/1248596905262608391/rINnPVp9_400x400.jpg" class="respimg" data-scrollax="properties: { translateY: '270px' }" alt="lakshay kumar - data science"></div>
                                     </div>
                                 </div>
                                
@@ -365,7 +367,7 @@
                                             <div class="custom-inner-header educ">
                                                 <i class="fal fa-university"></i>
                                                 <h3> Social Media Marketing Strategist - Duende Education</h3>
-                                                <span> July 2021 - Present </span>
+                                                <span> July 2021 - February 2023 </span>
                                             </div>
                                             <div class="ci-num"><span>02. - </span></div>
                                         </div>
