--- a/meet/index.html
+++ b/meet/index.html
@@ -24,6 +24,7 @@
     <script src='https://8x8.vc/vpaas-magic-cookie-ee4fa37a0fb74ec89883fd85bcf6b4db/external_api.js' async></script>
     <title>Meeting w Lakshay Kumar</title>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="script.js"></script>
 </head>
 
 
@@ -87,63 +88,3 @@
 </body>
 
 </html>
-<script type="text/javascript">
-    function openFullscreen() {
-        var elem = document.getElementById('jaas-container');
-        if (elem.requestFullscreen) {
-            elem.requestFullscreen();
-        } else if (elem.mozRequestFullScreen) { /* Firefox */
-            elem.mozRequestFullScreen();
-        } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari and Opera */
-            elem.webkitRequestFullscreen();
-        } else if (elem.msRequestFullscreen) { /* IE/Edge */
-            elem.msRequestFullscreen();
-        }
-    }
-
-    function closeFullscreen() {
-        if (document.exitFullscreen) {
-            document.exitFullscreen();
-        } else if (document.mozCancelFullScreen) { /* Firefox */
-            document.mozCancelFullScreen();
-        } else if (document.webkitExitFullscreen) { /* Chrome, Safari and Opera */
-            document.webkitExitFullscreen();
-        } else if (document.msExitFullscreen) { /* IE/Edge */
-            document.msExitFullscreen();
-        }
-    }
-
-    window.onload = () => {
-        const el = document.getElementById('jaas-container');
-        const meetid = getMeetIdFromURL();
-
-        if (!meetid) {
-            window.location.href = "error.html";
-            return;
-        }
-
-        const api = new JitsiMeetExternalAPI("8x8.vc", {
-            roomName: "vpaas-magic-cookie-ee4fa37a0fb74ec89883fd85bcf6b4db/" + meetid,
-            parentNode: el,
-        });
-
-        // Fullscreen button event listeners
-        const openFullscreenBtn = document.getElementById('openFullscreenBtn');
-        const closeFullscreenBtn = document.getElementById('closeFullscreenBtn');
-
-        openFullscreenBtn.addEventListener('click', openFullscreen);
-        closeFullscreenBtn.addEventListener('click', closeFullscreen);
-    };
-
-    function getMeetIdFromURL() {
-        const currentURL = window.location.href;
-        const urlParts = currentURL.split('=');
-        const urlPartsLength = urlParts.length;
-
-        if (urlPartsLength < 2) {
-            return null;
-        }
-
-        return urlParts[urlPartsLength - 1];
-    }
-</script>
