--- a/instagram.html
+++ b/instagram.html
@@ -1,4 +1,4 @@
 <script>
-    window.location = "https://www.instagram.com/strangest_sanity/";
+    window.location = "https://www.instagram.com/itz.alphic/";
 
 </script>
