--- a/hackhub/index.html
+++ b/hackhub/index.html
@@ -302,7 +302,7 @@
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12">
                             <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                                Still confused to <strong>join this free community?. </strong>Free free.</p>
+                                Still confused to <strong>join this free community?. </strong>Feel free.</p>
                         </div>
                         <div class="col-lg-12 col-md col-12 form-group mb-3" data-for="name">
                             <input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form4-9">
