--- a/schedule.html
+++ b/schedule.html
@@ -1,5 +1,5 @@
 
 <script>
-    window.location = "https://calendly.com/lakshaykumar/appoinment";
+    window.location = "https://topmate.io/lakshay_kumar";
     
 </script>
