--- a/talks.html
+++ b/talks.html
@@ -12,7 +12,7 @@
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="robots" content="index, follow" />
     <meta name="keywords"
-        content="Lakshay Kumar, talks, events, data science, artificial intelligence, machine learning, computer vision" />
+        content="lakshay kumar talks, lakshay kumar events, event, talks, events, data science, artificial intelligence, machine learning, computer vision" />
     <meta name="description"
         content="Explore the insightful talks and events organised by Lakshay Kumar, a young aspiring Data Scientist, specializing in artificial intelligence, machine learning, and computer vision. Discover how he builds AI and ML applications to provide solutions to real-world problems." />
     <meta name="author" content="Lakshay Kumar">
@@ -65,7 +65,7 @@
         <!-- Projects -->
         <section class="projects-area">
             <div class="container">
-                <h1 class="section-heading" data-aos="fade-up"><img src="assets/images/star-2.png" alt="Star"> All Projects <img src="assets/images/star-2.png" alt="Star"></h1>
+                <h1 class="section-heading" data-aos="fade-up"><img src="assets/images/star-2.png" alt="Star"> Meetup Events <img src="assets/images/star-2.png" alt="Star"></h1>
                 <div class="row">
                     <div class="col-md-4">
                         <div data-aos="zoom-in">
