--- a/icrested/form-revision.html
+++ b/icrested/form-revision.html
@@ -893,7 +893,7 @@
                     form.elements['alt_person_name'].value = data.altPersonName;
                     form.elements['alt_email'].value = data.altEmail;
                     form.elements['alt_telephone'].value = data.altTelephone;
-
+                    form.elements['school_name'].value = data.schoolName;
                     form.elements['school_address'].value = data.schoolAddress;
                     form.elements['school_telephone'].value = data.schoolTelephone;
                     form.elements['school_fax'].value = data.schoolFax;
