--- a/icrested/registration.html
+++ b/icrested/registration.html
@@ -84,8 +84,8 @@ using email attachments with your application</li>
                 <label for="school_telephone" class="form-label">Telephone</label>
                 <input type="tel" class="form-control" placeholder="Enter school telephone" name="school_telephone">
             </div>
-            <div class="col-md-6 mt-3">
-                <label for="school_fax" class="form-label invisible">Fax</label>
+            <div class="col-md-6 mt-3 invisible">
+                <label for="school_fax" class="form-label">Fax</label>
                 <input type="tel" class="form-control" placeholder="Enter school fax" name="school_fax">
             </div>
             <div class="col-md-6 mt-3">
