--- a/icrested/registration.html
+++ b/icrested/registration.html
@@ -21,7 +21,7 @@
         <ul>
             <li><b class="text-warning">You must have a valid google account to fill this form. Make sure you are signed in with google to fill in this form.</b></li>
             <li>Try to fill in as much fields as you can.</li>
-            <li>Areas marked in <font color="blue">blue</font> are for completion by either the consultant</li>
+            <li>Areas marked in <font color="blue">blue</font> are for completion by the consultant</li>
             <li>A complete list of the criteria can be found at the end of this form.</li>
             <li>Information that is mandatory for the registration/re-registration process
 is marked using a red asterisk. Please ensure copies have been included
@@ -84,7 +84,7 @@ using email attachments with your application</li>
                 <label for="school_telephone" class="form-label">Telephone</label>
                 <input type="tel" class="form-control" placeholder="Enter school telephone" name="school_telephone">
             </div>
-            <div class="col-md-6 mt-3 invisible">
+            <div class="col-md-6 mt-3 d-none">
                 <label for="school_fax" class="form-label">Fax</label>
                 <input type="tel" class="form-control" placeholder="Enter school fax" name="school_fax">
             </div>
@@ -387,7 +387,7 @@ V
                     Impact of provision – assessment summary for all pupils (only fill in the Key Stages relevant to
                     your school):
                 </label>
-<table class="table invisible">
+<table class="table d-none">
     <thead>
         <tr>
             <th>College / Undergrad</th>
