--- a/icrested/form-revision.html
+++ b/icrested/form-revision.html
@@ -544,19 +544,15 @@ V
                             <th>Std. 12</th>
                             <th>No. of students</th>
                             <th>Percentage
-A*-C<br>
-(grade 9-
-4)</th>
+No of
+students entered</th>
                             <th>Percentage
-A*-C
-(grade 9-
-4) for 5+
-GCSEs</th>
+Percentage
+A*-E</th>
                             <th>Percentage
-A*-
-G<br>(grade 9-
-1) for 5+
-GCSEs</th>
+Average
+point score
+per pupil</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -597,9 +593,20 @@ GCSEs</th>
                             <tr>
                                 <th rowspan="2">Std. 10</th>
                                 <th rowspan="2">No. of students</th>
-                                <th colspan="2">English</th>
-                                <th colspan="2">Maths</th>
-                                <th colspan="2">Science</th>
+                                <th colspan="2">Percentage
+A*-C<br>
+(grade 9-
+4)</th>
+                                <th colspan="2">Percentage
+A*-C<br>
+(grade 9-
+4) for 5+
+GCSEs</th>
+                                <th colspan="2">Percentage
+A*-
+G(grade 9-
+1) <br>for 5+
+GCSEs</th>
                             </tr>
                             <tr>
                                 <th>L4+</th>
