--- a/icrested/form-revision.html
+++ b/icrested/form-revision.html
@@ -735,7 +735,7 @@ GCSEs</th>
             </div>
             <br />
             <hr class="mt-5" />
-            <h3><b>Facilities and Equipment for Access to Teaching of SpLD Pupils (These can be observed remotely.)</b>
+            <h3><b>Facilities and Equipment for Access to Teaching of SpLD Pupils (To be observed remotely)</b>
             </h3><br /><br />
             <div class="row">
                 <div class="col-md-6 mt-3">
