--- a/projects.html
+++ b/projects.html
@@ -99,6 +99,19 @@
                                 <a class="theme-btn">Confidential</a>
                             </div>
                             </div>
+                                <div class="blog-item" data-aos="zoom-in">
+                                
+                            <div class="content">
+                                <span class="meta">Industrial || Mar 2023 - Present</a></span>
+                                <h1><a href="">Loyalty Program for Social Good - LoveAll</a></h1>
+                                <p>
+                                <p>
+                                    This project leverages technology through a loyalty program to address limited access to underprivileged education, aiming to provide equal opportunities for learning and empower marginalized communities.
+                                </p>
+                                </p>
+                                <a class="theme-btn">Confidential</a>
+                            </div>
+                            </div>
                             <div class="blog-item" data-aos="zoom-in">
                                 
                                 <div class="content">
